--- a/src/app/routes/applied-visual-design/applied-visual-design.component.scss
+++ b/src/app/routes/applied-visual-design/applied-visual-design.component.scss
@@ -9,25 +9,25 @@
 .star-1 {
   margin-top: 1%;
   margin-left: 60%;
-  animation-name: twinkle-1;
   animation-duration: 1s;
+  animation-name: twinkle;
 }
 
 .star-2 {
   margin-top: 2%;
   margin-left: 25%;
-  animation-name: twinkle-2;
-  animation-duration: 1s;
+  animation-duration: .9s;
+  animation-name: twinkle;
 }
 
-@keyframes twinkle-1 {
-  50% {
-    transform: scale(0.5);
-    opacity: 0.5;
-  }
+.star-3 {
+  margin-top: 1%;
+  margin-left: 50%;
+  animation-duration: 1.1s;
+  animation-name: twinkle;
 }
 
-@keyframes twinkle-2 {
+@keyframes twinkle {
   20% {
     transform: scale(0.5);
     opacity: 0.5;
