--- a/src/app/routes/applied-accessibility/applied-accessibility.component.html
+++ b/src/app/routes/applied-accessibility/applied-accessibility.component.html
@@ -1,1 +1,2 @@
-<p tabindex="0">Instructions: Fill in ALL your information then click <b>Submit</b></p>
+<input type="search" tabindex="1" name="search" id="search">
+    <input type="submit" tabindex="2" name="submit" value="Submit" id="submit">
