--- a/src/app/routes/responsive-web-design-principles/responsive-web-design-principles.component.scss
+++ b/src/app/routes/responsive-web-design-principles/responsive-web-design-principles.component.scss
@@ -1,11 +1,9 @@
-p {
-    font-size: 20px;
-  }
-
-  /* Only change code below this line */
-@media (max-height: 800px) { 
-  p {
-    font-size: 10px;
-  }
- }
-  /* Only change code above this line */
+.responsive-img {
+    max-width: 100%;
+      height: auto;
+    
+    }
+    
+    img {
+      width: 600px;
+    }
