--- a/src/app/routes/css-flexbox/css-flexbox.component.scss
+++ b/src/app/routes/css-flexbox/css-flexbox.component.scss
@@ -1,58 +1,16 @@
-header {
+#box-container {
     display: flex;
-      }
-      header .profile-thumbnail {
-        width: 50px;
-        height: 50px;
-        border-radius: 4px;
-      }
-      header .profile-name {
-    display: flex;
-    
-        margin-left: 10px;
-      }
-      header .follow-btn {
-    display: flex;
-    
-        margin: 0 0 0 auto;
-      }
-      header .follow-btn button {
-        border: 0;
-        border-radius: 3px;
-        padding: 5px;
-      }
-      header h3, header h4 {
-    display: flex;
-        margin: 0;
-      }
-      #inner p {
-        margin-bottom: 10px;
-        font-size: 20px;
-      }
-      #inner hr {
-        margin: 20px 0;
-        border-style: solid;
-        opacity: 0.1;
-      }
-      footer {
-    display: flex;
-    
-      }
-      footer .stats {
-    display: flex;
-    
-        font-size: 15px;
-      }
-      footer .stats strong {
-        font-size: 18px;
-      }
-      footer .stats .likes {
-        margin-left: 10px;
-      }
-      footer .cta {
-        margin-left: auto;
-      }
-      footer .cta button {
-        border: 0;
-        background: transparent;
-      }
+    height: 500px;
+flex-direction:row-reverse;
+  }
+  #box-1 {
+    background-color: dodgerblue;
+    width: 50%;
+    height: 50%;
+  }
+
+  #box-2 {
+    background-color: orangered;
+    width: 50%;
+    height: 50%;
+  }
