--- a/src/app/routes/css-flexbox/css-flexbox.component.scss
+++ b/src/app/routes/css-flexbox/css-flexbox.component.scss
@@ -1,7 +1,7 @@
 #box-container {
     display: flex;
     height: 500px;
-flex-direction:row-reverse;
+flex-direction:column;
   }
   #box-1 {
     background-color: dodgerblue;
