--- a/src/app/routes/css-flexbox/css-flexbox.component.scss
+++ b/src/app/routes/css-flexbox/css-flexbox.component.scss
@@ -2,16 +2,16 @@
     background: gray;
     display: flex;
     height: 500px;
-justify-content :center;
+align-items:center;
   }
   #box-1 {
     background-color: dodgerblue;
-    width: 25%;
-    height: 100%;
+    width: 200px;
+    font-size: 24px;
   }
 
   #box-2 {
     background-color: orangered;
-    width: 25%;
-    height: 100%;
+    width: 200px;
+    font-size: 18px;
   }
