--- a/src/app/routes/css-flexbox/css-flexbox.component.scss
+++ b/src/app/routes/css-flexbox/css-flexbox.component.scss
@@ -2,16 +2,36 @@
     background: gray;
     display: flex;
     height: 500px;
-align-items:center;
-  }
+flex-wrap:wrap;
   #box-1 {
     background-color: dodgerblue;
-    width: 200px;
-    font-size: 24px;
+    width: 25%;
+    height: 50%;
   }
 
   #box-2 {
     background-color: orangered;
-    width: 200px;
-    font-size: 18px;
+    width: 25%;
+    height: 50%;
   }
+  #box-3 {
+    background-color: violet;
+    width: 25%;
+    height: 50%;
+  }
+  #box-4 {
+    background-color: yellow;
+    width: 25%;
+    height: 50%;
+  }
+  #box-5 {
+    background-color: green;
+    width: 25%;
+    height: 50%;
+  }
+  #box-6 {
+    background-color: black;
+    width: 25%;
+    height: 50%;
+  }
+}
