--- a/src/app/routes/css-flexbox/css-flexbox.component.scss
+++ b/src/app/routes/css-flexbox/css-flexbox.component.scss
@@ -4,15 +4,12 @@
   }
   #box-1 {
     background-color: dodgerblue;
-    width: 100%;
     height: 200px;
-flex-shrink:1;
+flex-grow:1;
   }
 
   #box-2 {
     background-color: orangered;
-    width: 100%;
     height: 200px;
-flex-shrink:2;
-
+flex-grow:2;
   }
