--- a/src/app/routes/css-flexbox/css-flexbox.component.scss
+++ b/src/app/routes/css-flexbox/css-flexbox.component.scss
@@ -4,12 +4,13 @@
   }
   #box-1 {
     background-color: dodgerblue;
+flex: 2 2 150px;
     height: 200px;
-flex-basis:10em;
   }
 
   #box-2 {
     background-color: orangered;
+flex: 1 1 150px;
+
     height: 200px;
-flex-basis:20em;
   }
