--- a/src/app/routes/css-grid/css-grid.component.scss
+++ b/src/app/routes/css-grid/css-grid.component.scss
@@ -9,8 +9,7 @@
     width: 100%;
     background: LightGray;
     display: grid;
-    /* Only change code below this line */
-
     grid-template-columns: 100px 100px 100px;
-    /* Only change code above this line */
+grid-template-rows: 50px 50px;
+
   }
