--- a/src/app/routes/css-grid/css-grid.component.scss
+++ b/src/app/routes/css-grid/css-grid.component.scss
@@ -9,7 +9,6 @@
     width: 100%;
     background: LightGray;
     display: grid;
-    grid-template-columns: 100px 100px 100px;
-grid-template-rows: 50px 50px;
-
+    grid-template-columns: 1fr 100px 2fr;
+    grid-template-rows: 50px 50px;
   }
