--- a/src/app/routes/css-grid/css-grid.component.scss
+++ b/src/app/routes/css-grid/css-grid.component.scss
@@ -11,5 +11,5 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-   grid-row-gap: 5px;
+   grid-gap: 10px 20px;
   }
