--- a/src/app/routes/css-grid/css-grid.component.scss
+++ b/src/app/routes/css-grid/css-grid.component.scss
@@ -1,15 +1,20 @@
-.d1{background:LightSkyBlue;}
-  .d2{background:LightSalmon;}
-  .d3{background:PaleTurquoise;}
-  .d4{background:LightPink;}
-  .d5{background:PaleGreen;}
+.item1{background:LightSkyBlue;}
+  .item2{background:LightSalmon;}
+  .item3{background:PaleTurquoise;}
+  .item4{background:LightPink;}
+
+  .item5 {
+    background: PaleGreen;
+grid-column:2 / 4;
+  }
 
   .container {
     font-size: 40px;
+    min-height: 300px;
     width: 100%;
     background: LightGray;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-   grid-gap: 10px 20px;
+    grid-gap: 10px;
   }
