--- a/src/app/routes/css-grid/css-grid.component.scss
+++ b/src/app/routes/css-grid/css-grid.component.scss
@@ -1,8 +1,8 @@
 .item1{background:LightSkyBlue;}
-  .item2{background:LightSalmon;
-    justify-self:center;
+  .item2{background:LightSalmon;}
+  .item3{background:PaleTurquoise;
+    align-self:end;
 }
-  .item3{background:PaleTurquoise;}
   .item4{background:LightPink;}
   .item5 {background: PaleGreen;}
 
