--- a/src/app/routes/css-grid/css-grid.component.scss
+++ b/src/app/routes/css-grid/css-grid.component.scss
@@ -1,8 +1,6 @@
 .item1{background:LightSkyBlue;}
   .item2{background:LightSalmon;}
-  .item3{background:PaleTurquoise;
-    align-self:end;
-}
+  .item3{background:PaleTurquoise;}
   .item4{background:LightPink;}
   .item5 {background: PaleGreen;}
 
@@ -15,4 +13,6 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 10px;
+justify-items:center;
+
   }
