--- a/src/app/routes/css-grid/css-grid.component.scss
+++ b/src/app/routes/css-grid/css-grid.component.scss
@@ -13,6 +13,5 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 10px;
-justify-items:center;
-
+align-items:end;
   }
