--- a/src/app/routes/css-grid/css-grid.component.scss
+++ b/src/app/routes/css-grid/css-grid.component.scss
@@ -2,7 +2,11 @@
   .item2{background:LightSalmon;}
   .item3{background:PaleTurquoise;}
   .item4{background:LightPink;}
-  .item5 {background: PaleGreen;}
+
+  .item5 {
+    background: PaleGreen;
+grid-area: footer;
+  }
 
   .container {
     font-size: 40px;
@@ -13,5 +17,8 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 10px;
-align-items:end;
+    grid-template-areas:
+      "header header header"
+      "advert content content"
+      "footer footer footer";
   }
