--- a/src/app/routes/css-grid/css-grid.component.html
+++ b/src/app/routes/css-grid/css-grid.component.html
@@ -1,7 +1,6 @@
 <div class="container">
-    <div class="item1">1</div>
-    <div class="item2">2</div>
-    <div class="item3">3</div>
-    <div class="item4">4</div>
-    <div class="item5">5</div>
+    <div class="item1">header</div>
+    <div class="item2">advert</div>
+    <div class="item3">content</div>
+    <div class="item4">footer</div>
   </div>
