--- a/src/app/routes/basic-javascript/basic-javascript.component.html
+++ b/src/app/routes/basic-javascript/basic-javascript.component.html
@@ -1,7 +1,7 @@
-// Setup
-var a;
-var b = 2;
-
-// Only change code below this line
-a = 7;
+// Setup<br>
+var a;<br>
+var b = 2;<br>
+<br>
+// Only change code below this line<br>
+a = 7;<br>
 b = a;
